// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`credentials > create 1`] = `
"token_id: cred-new-123
token_id_short: crednew12345
name: app
api_token: nt_live_crednew12345_secret
s3_secret_access_key: nsk_live_newsecret
scopes:
  - storage:read
  - storage:write
branch_id: br-main-branch-123456
created_at: 2021-01-01T00:00:00.000Z
principal_type: user
"
`;

exports[`credentials > credential alias works 1`] = `
"- token_id: cred-test-123
  token_id_short: credtest1234
  name: Default object storage credential
  scopes:
    - storage:read
    - storage:write
  branch_id: br-main-branch-123456
  principal_type: user
  created_at: 2021-01-01T00:00:00.000Z
- token_id: cred-gateway-123
  token_id_short: credgate1234
  name: Default AI gateway credential
  scopes:
    - ai_gateway:invoke
  branch_id: br-main-branch-123456
  principal_type: user
  created_at: 2021-01-01T00:00:00.000Z
"
`;

exports[`credentials > list 1`] = `
"- token_id: cred-test-123
  token_id_short: credtest1234
  name: Default object storage credential
  scopes:
    - storage:read
    - storage:write
  branch_id: br-main-branch-123456
  principal_type: user
  created_at: 2021-01-01T00:00:00.000Z
- token_id: cred-gateway-123
  token_id_short: credgate1234
  name: Default AI gateway credential
  scopes:
    - ai_gateway:invoke
  branch_id: br-main-branch-123456
  principal_type: user
  created_at: 2021-01-01T00:00:00.000Z
"
`;

exports[`credentials > reveal 1`] = `
"token_id: cred-test-123
api_token: nt_live_credtest1234_secret
s3_secret_access_key: nsk_live_testsecret
"
`;

exports[`credentials > reveal table keeps secrets off the grid 1`] = `
"Token Id  cred-test-123
api_token: nt_live_credtest1234_secret
s3_secret_access_key: nsk_live_testsecret
"
`;

exports[`credentials > revoke 1`] = `""`;

exports[`credentials > rotate 1`] = `
"token_id: cred-test-123
token_id_short: credtest1234
name: Default object storage credential
api_token: nt_live_credtest1234_rotated
s3_secret_access_key: nsk_live_rotatedsecret
scopes:
  - storage:read
  - storage:write
branch_id: br-main-branch-123456
principal_type: user
created_at: 2021-01-01T00:00:00.000Z
"
`;
